syntax = "proto3";
package symphony.poolmanager.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";
import "symphony/poolmanager/v1beta1/module_route.proto";
import "symphony/poolmanager/v1beta1/tx.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/poolmanager/types";

// Params holds parameters for the poolmanager module
message Params {
  repeated cosmos.base.v1beta1.Coin pool_creation_fee = 1 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"pool_creation_fee\"",
    (gogoproto.nullable) = false
  ];
  // taker_fee_params is the container of taker fee parameters.
  TakerFeeParams taker_fee_params = 2 [
    (gogoproto.moretags) = "yaml:\"taker_fee_params\"",
    (gogoproto.nullable) = false
  ];
  // authorized_quote_denoms is a list of quote denoms that can be used as
  // token1 when creating a concentrated pool. We limit the quote assets to a
  // small set for the purposes of having convenient price increments stemming
  // from tick to price conversion. These increments are in a human readable
  // magnitude only for token1 as a quote. For limit orders in the future, this
  // will be a desirable property in terms of UX as to allow users to set limit
  // orders at prices in terms of token1 (quote asset) that are easy to reason
  // about.
  repeated string authorized_quote_denoms = 3
      [ (gogoproto.moretags) = "yaml:\"authorized_quote_denoms\"" ];
}

// GenesisState defines the poolmanager module's genesis state.
message GenesisState {
  // the next_pool_id
  uint64 next_pool_id = 1;
  // params is the container of poolmanager parameters.
  Params params = 2 [ (gogoproto.nullable) = false ];
  // pool_routes is the container of the mappings from pool id to pool type.
  repeated ModuleRoute pool_routes = 3 [ (gogoproto.nullable) = false ];

  // KVStore state
  TakerFeesTracker taker_fees_tracker = 4;
  repeated PoolVolume pool_volumes = 5;
  repeated DenomPairTakerFee denom_pair_taker_fee_store = 6
      [ (gogoproto.nullable) = false ];
}

// TakerFeeParams consolidates the taker fee parameters for the poolmanager.
message TakerFeeParams {
  // default_taker_fee is the fee used when creating a new pool that doesn't
  // fall under a custom pool taker fee or stableswap taker fee category.
  string default_taker_fee = 1 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.customname) = "DefaultTakerFee",
    (gogoproto.nullable) = false
  ];
  // osmo_taker_fee_distribution defines the distribution of taker fees
  // generated in OSMO. As of this writing, it has two categories:
  // - staking_rewards: the percent of the taker fee that gets distributed to
  //   stakers.
  // - community_pool: the percent of the taker fee that gets sent to the
  //   community pool.
  TakerFeeDistributionPercentage osmo_taker_fee_distribution = 2 [
    (gogoproto.customname) = "OsmoTakerFeeDistribution",
    (gogoproto.nullable) = false
  ];
  // non_osmo_taker_fee_distribution defines the distribution of taker fees
  // generated in non-OSMO. As of this writing, it has two categories:
  // - staking_rewards: the percent of the taker fee that gets swapped to OSMO
  //   and then distributed to stakers.
  // - community_pool: the percent of the taker fee that gets sent to the
  //   community pool. Note: If the non-OSMO asset is an authorized_quote_denom,
  //   that denom is sent directly to the community pool. Otherwise, it is
  //   swapped to the community_pool_denom_to_swap_non_whitelisted_assets_to and
  //   then sent to the community pool as that denom.
  TakerFeeDistributionPercentage non_osmo_taker_fee_distribution = 3 [
    (gogoproto.customname) = "NonOsmoTakerFeeDistribution",
    (gogoproto.nullable) = false
  ];
  // admin_addresses is a list of addresses that are allowed to set and remove
  // custom taker fees for denom pairs. Governance also has the ability to set
  // and remove custom taker fees for denom pairs, but with the normal
  // governance delay.
  repeated string admin_addresses = 4
      [ (gogoproto.moretags) = "yaml:\"admin_addresses\"" ];
  // community_pool_denom_to_swap_non_whitelisted_assets_to is the denom that
  // non-whitelisted taker fees will be swapped to before being sent to
  // the community pool.
  string community_pool_denom_to_swap_non_whitelisted_assets_to = 5
      [ (gogoproto.moretags) =
            "yaml:\"community_pool_denom_to_swap_non_whitelisted_assets_to\"" ];

  // reduced_fee_whitelist is a list of addresses that are
  // allowed to pay a reduce taker fee when performing a swap
  // (i.e. swap without paying the taker fee).
  // It is intended to be used for integrators who meet qualifying factors
  // that are approved by governance.
  // Initially, the taker fee is allowed to be bypassed completely. However
  // In the future, we will charge a reduced taker fee instead of no fee at all.
  repeated string reduced_fee_whitelist = 6
      [ (gogoproto.moretags) = "yaml:\"reduced_fee_whitelist\"" ];
}

// TakerFeeDistributionPercentage defines what percent of the taker fee category
// gets distributed to the available categories.
message TakerFeeDistributionPercentage {
  string staking_rewards = 1 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"staking_rewards\"",
    (gogoproto.nullable) = false
  ];
  string community_pool = 2 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"community_pool\"",
    (gogoproto.nullable) = false
  ];
}

message TakerFeesTracker {
  repeated cosmos.base.v1beta1.Coin taker_fees_to_stakers = 1
      [ (gogoproto.nullable) = false ];
  repeated cosmos.base.v1beta1.Coin taker_fees_to_community_pool = 2
      [ (gogoproto.nullable) = false ];
  int64 height_accounting_starts_from = 3
      [ (gogoproto.moretags) = "yaml:\"height_accounting_starts_from\"" ];
}

// PoolVolume stores the KVStore entries for each pool's volume, which
// is used in export/import genesis.
message PoolVolume {
  // pool_id is the id of the pool.
  uint64 pool_id = 1;
  // pool_volume is the cumulative volume of the pool.
  repeated cosmos.base.v1beta1.Coin pool_volume = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}